# RoadGeneration

./: .buildinfo  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  README.rst  _README.md  addLaneSections_8h.html  addLaneSections_8h_source.html  addObjects_8h.html  addObjects_8h_source.html  all.sh  allTest.sh  annotated.html  autodoc.html  build.sh  buildRoad_8h.html  buildRoad_8h_source.html  buildScript.sh  buildScriptDocker.sh  buildSegments_8h.html  buildSegments_8h_source.html  build_xercesc_linux.sh  build_xercesc_win64.sh  classXStr-members.html  classXStr.html  classes.html  closeRoadConnection_8h.html  closeRoadConnection_8h_source.html  closeRoadNetwork_8h.html  closeRoadNetwork_8h_source.html  connectingRoad_8h.html  connectingRoad_8h_source.html  createLaneConnection_8h.html  createLaneConnection_8h_source.html  createRoadConnection_8h.html  createRoadConnection_8h_source.html  curve_8h.html  (+110 more)
.doctrees/: autodoc.doctree  doc.doctree  environment.pickle  index.doctree  inputdoc.doctree  readmelink.doctree  variationlink.doctree
.doctrees/overview/: variation.doctree
.github/workflows/: build.yml  cmake.yml  deploydoxy.yml  master.yml
_sources/: autodoc.rst.txt  doc.rst.txt  index.rst.txt  inputdoc.rst.txt  readmelink.rst.txt  variationlink.rst.txt
_sources/overview/: variation.rst.txt
breathe/doxygen/: interface.cfg
doc/: config.doxy  content.tex  doxygenDocumentation.doxy  header.tex  main.tex  xsdDoc.sh  xsdDocumentation.sh
doc/content/: 1_Einleitung.tex  2_StandDerTechnik.tex  3_Forschungsansatz.tex  4_Umsetzung.tex  5_Ergebnisse.tex  6_Zusammenfassung.tex  Anhang.tex
doc/fig/: fig  fig4.tikz  fig5  fig5a.tikz  fig5b.tikz
doc/gellerCesSeminar/: README.md  acronym_entries.tex  biberHeader.tex  header.tex  make_all.sh  symbol_entries.tex
doc/literature/: literature_masterthesis.bib
doc/source/: conf.py  connection.rst  generation.rst  index.rst  modules.rst  utils.rst
docker/: Dockerfile
docs/: conf.py  doc.rst  index.rst  inputdoc.rst
docs/dias/: all.dia  connectingroad.dia  junction.dia  junction.dia.autosave  lanes.dia  roundabout.dia  segments.dia
docs/examples/: general.xml
docs/overview/: examples.rst  readme.rst
examples/: carla_test.xml  close_network.xml  close_roads.xml  complex.xml  err_only_jun.xml  geomBug.xml  jun_m2a_round.xml  jun_ma_3a.xml  junction_ma.xml  junction_templateM2A.xml  rb_linking_bug.xml  simple.xml  small_test.xml
examples/Templates/: Template_jun_2M.xml  Template_jun_MA.xml  (+4 more)
include/: addLaneSections.h  addObjects.h  buildRoad.h  closeRoadConnection.h  geometries.h  helper.h  interface.h  roadNetwork.h  settings.h  xml.h
io/: 2M.xml  4A.xml  M2A.xml  all.xml  con_lanewiden.xml  con_roads.xml  jun_ma_3a.xml  junction1.xml  junction2.xml  junction3.xml  junction4.xml  junction5.xml  junction6.xml  junction7.xml  laneWidingDrop.xml  rb_crash.xml  roundabout.xml
overview/: variation.html
paper/: README.md  paperIdea.md
russ/: Handbuch_Russ.pdf.sb-afbaeb35-GmG3EZ  inputRuss.xml  russ.xsd
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_b.js  files_0.js  files_1.js  files_2.js  files_4.js  files_7.js  files_8.js  files_a.js  files_c.js  files_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+11 more)
src/: Geometry.cpp  Lane.h  LaneSection.cpp  LaneSection.h  Lanes.cpp  Printer.cpp  RoadNetwork.cpp  RoadNetwork.h  Store.h  addObjects.h  buildOpenDriveData.h  buildSegments.h  closeRoadConnection.h  closeRoadNetwork.h  connectingRoad.h  createLaneConnection.h  createRoadConnections.h  curve.h  export.cpp  export.h  generateRoad.h  geometries.h  helper.h  interface.h  io.h  laneSectionChange.h  linkSegments.h  main.cpp  roundAbout.h  tjunction.h  xjunction.h
src Russ/: Geometry.h  Lane.cpp  Lanes.h  Reader.cpp  Road.cpp  Road.h  main.cpp
test/: 4a_fixed.xml  cmp.py  compare.sh  junction_m2a.xml  junction_ma.xml  junction_ma_2.xml  junction_ma_4.xml  junction_ma_5.xml  junction_ma_6.xml  test1.xml  test1.xodr  test3.xml  test4.xml  test5.xml  test6.xml  test7.xml  test8.xml  test9.xml  xtest.xml
variation/: MANIFEST.in  README.md  README.rst  __main__.py  dependencySolver.py  runner.py  setup.py
xml/: doc.sh  input.xsd  inputTJunction.xml  test.xml
(+150 files in other folders)
